[tool.poetry]
name = "trustworthy-ai"
version = "0.1.0"
description = ""
authors = ["Anastasiia Alekseeva <alekseevaas21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
torch = "^2.8.0"
numpy = "^2.3.2"
torchvision = "^0.23.0"
matplotlib = "^3.10.6"
pandas = "^2.3.2"
plotly = "^6.3.0"
datasets = "^4.0.0"
kagglehub = "^0.3.13"
scikit-learn = "^1.7.1"
xgboost = "^3.0.4"
shap = "^0.48.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
